hphp/hack/test/typecheck/global_const4.php.exp
File "global_const4.php", line 3, characters 11-16:
Illegal constant value (Naming[2023])
