hphp/hack/test/typecheck/global_const4.php
<?hh // partial

const X = Vector{};
